fix home page width flicker

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,1 +1,9 @@
 // app global css in SCSS form
+// html,body {
+// 	height: 100%;
+// 	width: 100%;
+// }
+
+html {
+	scrollbar-width: none;
+}
